--- a/MtACharSheet.html
+++ b/MtACharSheet.html
@@ -58,25 +58,7 @@
     </div>
 
     <!--Скрипт обработки вкладок -->
-    <script>
-        function configureTabsAndButtons(tabs, activeTabIndex, styles) {
-            const { ACTIVE_BUTTON_CLASS, DISPLAY_BLOCK_CLASS } = styles;
-
-            for (const curTab of tabs) {
-                curTab.button.onclick = function () {
-                    for (const tab of tabs) {
-                        tab.button.classList.remove(ACTIVE_BUTTON_CLASS);
-                        tab.content.classList.remove(DISPLAY_BLOCK_CLASS);
-                    }
-
-                    curTab.button.classList.add(ACTIVE_BUTTON_CLASS);
-                    curTab.content.classList.add(DISPLAY_BLOCK_CLASS);
-                };
-            }
-
-            tabs?.[activeTabIndex]?.button?.click();
-        }
-    </script>
+    <script src="common/tabs.js"></script>
 
     <script>
         const tabs = [1, 2, 3].map(i => ({
@@ -84,7 +66,7 @@
             content: document.getElementById(`tab-cnt-${i}`),
         }));
 
-        configureTabsAndButtons(tabs, 0, { ACTIVE_BUTTON_CLASS: 'tab-button-active', DISPLAY_BLOCK_CLASS: 'display-block' });
+        configureTabsAndButtons({ tabs: tabs, activeTabIndex: 0, styles: { ACTIVE_BUTTON_CLASS: 'tab-button-active', DISPLAY_BLOCK_CLASS: 'display-block' } });
     </script>
 </body>
 
