--- a/MtACharSheet.html
+++ b/MtACharSheet.html
@@ -66,7 +66,14 @@
             content: document.getElementById(`tab-cnt-${i}`),
         }));
 
-        configureTabsAndButtons({ tabs: tabs, activeTabIndex: 0, styles: { ACTIVE_BUTTON_CLASS: 'tab-button-active', DISPLAY_BLOCK_CLASS: 'display-block' } });
+        configureTabsAndButtons({
+            tabs: tabs,
+            activeTabIndex: 0,
+            styles: {
+                ACTIVE_BUTTON_CLASS: 'tab-button-active',
+                DISPLAY_BLOCK_CLASS: 'display-block'
+            },
+        });
     </script>
 </body>
 
