--- a/MtACharSheet.html
+++ b/MtACharSheet.html
@@ -5,45 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dark MtA Char Sheet</title>
+
+    <link rel="stylesheet" href="common/styles.css">
 </head>
-
-<style>
-    /* Стили вкладок */
-    .tab-buttons-container {
-        overflow: hidden;
-        border: 1px solid #ccc;
-        background-color: #f1f1f1;
-    }
-
-    .tab-button {
-        background-color: inherit;
-        float: left;
-        border: none;
-        outline: none;
-        cursor: pointer;
-        padding: 14px 16px;
-        transition: 0.3s;
-    }
-
-    .tab-button:hover {
-        background-color: #ddd;
-    }
-
-    .tab-button.tab-button-active {
-        background-color: #ccc;
-    }
-
-    .tab-content {
-        display: none;
-        padding: 6px 12px;
-        border: 1px solid #ccc;
-        border-top: none;
-    }
-
-    .display-block {
-        display: block;
-    }
-</style>
 
 <body>
     <div class="tab-buttons-container">
