--- a/MtACharSheet.html
+++ b/MtACharSheet.html
@@ -33,10 +33,7 @@
         configureTabsAndButtons({
             tabs: tabs,
             activeTabIndex: 0,
-            styles: {
-                ACTIVE_BUTTON_CLASS: 'tab-button-active',
-                DISPLAY_BLOCK_CLASS: 'display-block'
-            },
+            activeStyleClass: 'active',
         });
     </script>
 </body>
