--- a/MtA20CharSheet.html
+++ b/MtA20CharSheet.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dark MtA Char Sheet</title>
+    <title>Dark MtA 20th Char Sheet</title>
 
     <link rel="stylesheet" href="common/styles.css">
 </head>
