--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dark WoD Char Sheet</title>
+    <title>Dark WoD Char Sheets</title>
 </head>
+
 <body>
-    123
+    <h1>Ы?</h1>
+    <ul>
+        <li>
+            <a href="MtA20.html">
+                Маги 20
+            </a>
+        </li>
+    </ul>
 </body>
+
 </html>
