--- a/src/index.html
+++ b/src/index.html
@@ -8,11 +8,11 @@
 </head>
 
 <body>
-    <h1>Ы?</h1>
+    <h1>Список листов</h1>
     <ul>
         <li>
             <a href="MtA20.html">
-                Маги 20
+                Mage: The Ascension 20th Anniversary Edition.
             </a>
         </li>
     </ul>
