--- a/src/blank.html
+++ b/src/blank.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>???</title>
 </head>
 
 <body>
-    <div id="page-title">???</div>
     <a href="index.html">Назад</a>
+    <div id="page-title">???</div>
 </body>
 
 </html>
