--- a/src/blank.html
+++ b/src/blank.html
@@ -8,8 +8,10 @@
 </head>
 
 <body>
-    <a href="index.html">Назад</a>
-    <div id="page-title">???</div>
+    <div style="width: 100%; display: inline-block; ">
+        <div id="page-title" style="float: left;">???</div>
+        <a href="index.html" style="float: right;">Назад</a>
+    </div>
 </body>
 
 </html>
