Add main container

--- a/src/blank.html
+++ b/src/blank.html
@@ -12,6 +12,7 @@
         <div id="page-title" style="float: left;">???</div>
         <a href="index.html" style="float: right;">Назад</a>
     </div>
+    <div id="main-container">Some content</div>
 </body>
 
 </html>
